--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,25 +22,27 @@ builds:
       - goos: openbsd
         goarch: arm
 
-brew:
-  github:
-    owner: wyattjoh
-    name: homebrew-stable
-  folder: Formula
-  homepage:  https://github.com/wyattjoh/git-publish
-  description: git branch publisher
-  test: |
-    system "#{bin}/git-publish -v"
+brews:
+  - tap:
+      owner: wyattjoh
+      name: homebrew-stable
+    folder: Formula
+    homepage: https://github.com/wyattjoh/git-publish
+    description: git branch publisher
+    test: |
+      system "#{bin}/git-publish -v"
+    install: |
+      bin.install "git-publish"
 
-archive:
-  name_template: '{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-  format: tar.gz
-  format_overrides:
-    - goos: windows
-      format: zip
-  files:
-    - LICENSE.md
-    - README.md
+archives:
+  - name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+    format: tar.gz
+    format_overrides:
+      - goos: windows
+        format: zip
+    files:
+      - LICENSE.md
+      - README.md
 
 release:
   github:
