feat: added cli tool

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -7,5 +7,7 @@
   enable-all = true
   disable = [
     "funlen",
-    "forbidigo"
+    "forbidigo",
+    "gochecknoglobals",
+    "exhaustivestruct"
   ]
